# trouble

./: flake.nix
bt-hci-darwin/: Cargo.toml
bt-hci-darwin/src/: lib.rs
bt-hci-linux/src/: lib.rs
examples/apps/src/: ble_bas_central.rs  ble_scanner.rs
examples/darwin/: Cargo.toml
examples/linux/: Cargo.toml
examples/rp-pico-2-w/: .taplo.toml  Cargo.toml  Embed.toml
host/src/: connection.rs  host.rs  lib.rs  scan.rs
