[package]
name = "bt-hci-darwin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Darwin integration with bt-hci"
repository = "https://github.com/embassy-rs/trouble"
keywords = ["no-std"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
documentation = "https://docs.embassy.dev/trouble-host"

[dependencies]
async-hid = { version = "0.4.4", default-features = false, features = [
  "async-io",
] }
bt-hci = "0.7"
critical-section = { version = "1", features = ["std"] }
embassy-time = { version = "0.5", features = ["std", "generic-queue-8"] }
embedded-io = { version = "0.7", features = ["std"] }
env_logger = "0.11"
futures = "0.3.31"
futures-lite = "2.6.1"
hidapi = "2.6.4"
log = "0.4"
rand = { version = "0.8.5", features = ["getrandom"] }
tokio = { version = "1", features = ["io-util", "net", "rt", "macros", "signal", "sync"] }
